# new_f1tenth_simulator

./: .gitignore  README.md
black_car_model/: CMakeLists.txt  model.config  package.xml
black_car_model/urdf/: black_car.urdf
blue_car_model/: CMakeLists.txt  model.config  package.xml
blue_car_model/urdf/: blue_car.urdf
clear_car_model/: CMakeLists.txt  model.config  package.xml
clear_car_model/urdf/: clear_car.urdf
f1tenth_gazebo/: CMakeLists.txt  package.xml
f1tenth_gazebo/launch/: simulator.launch
f1tenth_gazebo/plugins/: world_controls_plugin.cc
f1tenth_gazebo/worlds/: default_track.world
f1tenth_input_handler/: CMakeLists.txt  package.xml
f1tenth_input_handler/launch/: f1tenth_input_handler.launch
f1tenth_input_handler/src/: input_handler.cpp
f1tenth_model/: CMakeLists.txt  model.config  package.xml
f1tenth_model/plugins/: test_plugin.cc  wheel_plugin.cc
f1tenth_model/urdf/: f1tenth.urdf
f1tenth_object_tracking/: CMakeLists.txt  package.xml  settings.yaml
f1tenth_object_tracking/launch/: f1tenth_object_tracking.launch
f1tenth_object_tracking/src/: f1tenth_object_tracking.cpp
f1tenth_semantic_segmentation/: CMakeLists.txt  package.xml  settings.yaml
f1tenth_semantic_segmentation/launch/: semantic_segmentation.launch
f1tenth_semantic_segmentation/src/: f1tenth_semantic_segmentation.cpp
f1tenth_track_model/: CMakeLists.txt  model.config  package.xml
f1tenth_track_model/plugins/: track_plugin.cc
f1tenth_track_model/urdf/: f1tenth_track.urdf
red_car_model/: CMakeLists.txt  model.config  package.xml
red_car_model/urdf/: old_red_car.urdf  red_car.urdf
road_description/: CMakeLists.txt  package.xml
road_description/include/road_description/: road.h  road_builder.h  road_config.h  road_line.h  road_point.h  road_segment.h
sample_lane_follower_node/: CMakeLists.txt  package.xml  settings.yaml
sample_lane_follower_node/launch/: sample_lane_follower_node.launch
sample_lane_follower_node/src/: sample_lane_follower_node.cpp
sample_overtaking_node/: CMakeLists.txt  package.xml  settings.yaml
sample_overtaking_node/launch/: sample_overtaking_node.launch
sample_overtaking_node/src/: sample_overtaking_node.cpp
yellow_car_model/: CMakeLists.txt  model.config  package.xml
yellow_car_model/urdf/: yellow_car.urdf
