<?xml version="1.0"?>
<package format="2">
  <name>f1tenth_input_handler</name>
  <version>0.0.0</version>
  <description>Package to handle input commands in the F1Tenth Simulator</description>
  <maintainer email="rbrown53@huskers.unl.edu">Ryan Brown</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
