<?xml version="1.0"?>
<package format="2">
  <name>f1tenth_track_model</name>
  <version>0.0.0</version>
  <description>Package for the F1tenth Track</description>
  <maintainer email="rbrown53@huskers.unl.edu">Ryan Brown</maintainer>
  <license>TODO</license>
   <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
   <build_depend>std_msgs</build_depend>
   <exec_depend>std_msgs</exec_depend>
  <build_export_depend>std_msgs</build_export_depend>
   <build_depend>road_description</build_depend>
   <exec_depend>road_description</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
