<?xml version="1.0"?>
<package format="2">
  <name>road_description</name>
  <version>0.0.0</version>
  <description>Package to help build road configurations in F1Tenth Simulator</description>
  <maintainer email="rbrown53@huskers.unl.edu">Ryan Brown</maintainer>
  <license>TODO</license>
   <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
